# winget-search

./: .editorconfig  .gitignore  404.html  README.md  extract_packages.py  force_pages_update.sh  index.html  pyproject.toml  requirements.txt
.github/: github_workflows_build.yml
.github/workflows/: github_workflows_build.yml  github_workflows_pages_deploy.yml
